@@ -7239,3 +7239,19 @@ elem2 2 12   14
 > ## NA_character_ could be treated as "NA"; depending on the locale, it would not necessarily
 > ## be the min or max.  
 > 
+> 
+> ## When two entries needed to be cut to width, str() mixed up
+> ## the values (reported by Gerrit Eichner)
+> oldopts <- options(width=70, stringsAsFactors=TRUE)
+> n <- 11      # number of rows of data frame
+> M <- 10000   # order of magnitude of numerical values
+> longer.char.string <- "zjtvorkmoydsepnxkabmeondrjaanutjmfxlgzmrbjp"
+> X <- data.frame( A = 1:n * M,
++                  B = rep( longer.char.string, n))
+> str( X, strict.width = "cut")
+'data.frame':	11 obs. of  2 variables:
+ $ A: num  1e+04 2e+04 3e+04 4e+04 5e+04 6e+04 7e+04 8e+04 9e+04 1e+..
+ $ B: Factor w/ 1 level "zjtvorkmoydsepnxkabmeondrjaanutjmfxlgzmrbj"..
+> options(oldopts)
+> ## The first row of the str() result was duplicated.
+> 
